--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A set of styles shared by Nenkan applications",
   "main": "index.scss",
   "scripts": {
-    "build": "sass --style=compressed style.scss dist/style.css",
+    "build": "sass --style=compressed index.scss dist/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nenkan",
