--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "nenkan",
+  "homepage": "https://nenkan.github.io/css/",
   "license": "MIT",
   "repository": {
     "type": "git",
